--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -53,10 +53,10 @@ img{
   background-repeat: no-repeat;
   background-size: 14px;
   outline:none;
-  border-radius: 10px;
-  height: 15px;
+  border-radius: 5px;
+  height: 20px;
   line-height: 9px;
-  width: 15px;
+  width: 20px;
   position: relative;
 }
 
@@ -121,23 +121,23 @@ img{
   .filter-icon-details {
     background-image: url(../images/PNG/pin.png);
     background-size: 14px;
-    //background-position: 0px 0px;
+    background-position: 2px 2px;
   }
   .filter-icon-corrections {
     background-image: url(../images/PNG/healing.png);
-    //background-position: 0px;
+    background-position: 2px 2px;
   }
 
   .filter-icon-questions {
     background-image: url(../images/PNG/question.png);
     background-size: 13px;
-    //background-position: 0px 0px;
+    background-position: 2px 2px;
   }
 
   .filter-icon-other {
     background-image: url(../images/PNG/other.png);
     background-size: 17px;
-    //background-position: 0px 0px;
+    background-position: 2px 2px;
   }
 
   .selected-details, .note-details, .filter-icon-details:hover, .icon-details:hover {
@@ -185,7 +185,6 @@ img{
   .note-contributor {
     font-size: 0.6em;
     text-align: right;
-    margin-right: 5px;
     float: left;
   }
 
@@ -203,6 +202,10 @@ img{
     background-color: #f5f5f5;
   }
 
+  .reply-content{
+    background-color:white;
+  }
+
   .input-container {
     background-color: #fff;
     border: 1px solid #949494;
@@ -214,12 +217,12 @@ img{
   }
 
   .note-container {
-    border: 1px solid rgb(219, 217, 199);
+    border: 1px solid rgb(216, 211, 222);
     border-top: none;
     overflow-y: scroll;
     overflow-x: hidden;
     padding: 10px;
-    background: rgb(255, 244, 247);
+    background: rgb(192, 187, 197);
     position: fixed;
     right: 20px;
     top: 14.7%;
@@ -227,10 +230,10 @@ img{
   }
 
   .filter-container {
-    border: 1px solid rgb(219, 217, 199);
+    border: 1px solid rgb(216, 211, 222);
     border-bottom: none;
     padding: 5px;
-    background: rgb(255, 244, 247);
+    background: rgb(192, 187, 197);
     position: fixed;
     top: 4.2%;
     height: 10.6%;
