working on reply..

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -285,7 +285,7 @@ img{
   .delete-button {
     background: rgba(255, 0, 21, 0.57);
     margin: 0px 10px;
-    margin-top:4.5px;
+    margin-bottom:4.5px;
     font-size: 0.6em;
     float: right;
     color: white;
