--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -170,11 +170,12 @@ img{
   }
 
   .reply-button:hover {
-    background: rgba(149, 157, 255, 0.68);
+    background-color: rgb(212, 225, 236);
   }
 
+
   .reply-button {
-    background: rgba(226, 241, 255, 0.64);
+    background-color: rgba(226, 241, 255, 0.64);
     float: right;
     font-size: 0.6em;
     border-radius: 3px;
