--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,14 +4,15 @@
     <div class="note-content">{{note.content}}</div>
 
     <div class="comment-footer">
-        <button class="plain-button reply-button" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">Reply</button>
+        <button class="plain-button reply-button" ng-if="currentReply !== note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">Reply</button>
+        <button class="plain-button reply-button" ng-if="currentReply === note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">Cancel</button>
         <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
         <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
         <div class="note-rating">
-            <div ng-if="note.rating>1">{{note.rating}} people found this helpful.</div>
+            <div ng-if="note.rating>1">{{note.rating}} people found this helpful. {{currentReply}} {{currentReply === note.id}}</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-reply="currentReply"></note>
     </div>
 </div>
