--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -3,7 +3,7 @@
     (note.category === 'methods'? 'note-methods' :
     (note.category === 'details' ? 'note-details' :
     (note.category === 'questions' ? 'note-questions' :
-    (note.category === 'other' ? 'note-other' : 'baseline-content')))))">
+    (note.category === 'other' ? 'note-other' : 'reply-content')))))">
 
     <div class="note-steps">
         <div ng-if="notelist.length>=1" >Steps: {{notelist}}</div>
