--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -311,10 +311,15 @@ img{
     background-position: 6px 0px;
     background-repeat: no-repeat;
     background-size: 20px;
-    height: 28px;
+    height: 23px;
     line-height: 9px;
-    width: 35px;
+    width: 28px;
     float: left;
+    outline: none;
+  }
+
+  .rated{
+    background-image: url(../images/PNG/thumbs-up-pressed.png);;
   }
   
   .date {
