--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -431,6 +431,11 @@ h2{
   line-height: 9px;
   width: 35px;
   float: left;
+  outline:none;
+}
+
+.rated{
+  background-image: url(../images/PNG/thumbs-up-pressed.png);;
 }
 
 .step-list{
