--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -219,6 +219,10 @@ img{
     font-weight: bold;
   }
 
+  .reply-content{
+    background-color: white;
+  }
+
   .contributors-show {
     background-image: url(../images/PNG/arrow-down.png);
     background-position: 5px 5px;
