--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -10,8 +10,8 @@ html,body{
 
 .content{
   background-color: #fff;
-  margin: 44px 0px;
-  padding: 10px 0px;
+  margin: 44px 0;
+  padding: 10px 0;
 }
 
 img{
@@ -86,7 +86,7 @@ img{
 
   .note {
    // border: 1px solid #9b9b9b;
-    margin: 5px 0;
+    margin: 10px 0;
     padding:5px 10px;
     clear: both;
     border-radius: 3px;
@@ -131,7 +131,7 @@ img{
   .sort-container {
     //border: 1px solid rgb(216, 211, 222);
     border-bottom: none;
-    padding: 0px;
+    padding: 0;
     background: #efefef;
     position: fixed;
     top: 4.2%;
@@ -188,7 +188,6 @@ img{
   float: left;
   padding: 8px 27px;
   position: relative;
-  margin:3px 0;
   font-weight:bold;
   color: #62e2d9;
   line-height: 15px;
@@ -258,8 +257,8 @@ img{
   }
 
   .contributors-show {
-    background-image: url(../images/SVG/ContributorsShowLess.svg);
-    background-position: 0px 3px;
+    background-image: url(../images/SVG/ContributorsShowMore.svg);
+    background-position: 0 3px;
     float: left;
     background-repeat: no-repeat;
     background-size: 20px;
@@ -270,9 +269,18 @@ img{
     margin-right: 4px;
   }
 
+  .contributors-show:hover{
+    background-image: url(../images/SVG/ContributorsShowMoreHover.svg);
+    background-position: 0 2px;
+  }
+
+  .contributors-hide:hover{
+    background-image: url(../images/PNG/ContributorsShowLessHover.png);
+  }
+
   .contributors-hide {
-    background-image: url(../images/SVG/ContributorsShowMore.svg);
-    background-position: 0px 3px;
+    background-image: url(../images/SVG/ContributorsShowLess.svg);
+    background-position: 0 3px;
     float: left;
     background-repeat: no-repeat;
     background-size: 20px;
@@ -331,7 +339,7 @@ img{
   }
 
   .delete-button {
-    margin: 0px 10px;
+    margin: 0 10px;
     font-size: 0.6em;
     float: right;
     border-radius: 4px;
@@ -345,7 +353,7 @@ img{
 
   .rating-button {
     background-image: url(../images/PNG/thumbs-UP.png);
-    background-position: 6px 0px;
+    background-position: 6px 0;
     background-repeat: no-repeat;
     background-size: 20px;
     height: 23px;
@@ -364,7 +372,7 @@ img{
     color:#a6a6a6;
     font-weight:400;
   }
-  
+
   .date {
     font-size: 11px;
     color:#a6a6a6;
