--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -30,7 +30,7 @@
         <div class="note-contributor">Other•</div>
     </div>
 
-    <div class="note-contributor">Submitted by {{note.contributor}}•</div>
+    <div class="note-contributor">{{note.contributor}}•</div>
     <div class="date">{{date}}</div>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
@@ -38,10 +38,10 @@
 
     <div class="note-content">{{note.content}}</div>
     <div class="comment-footer">
-        <button class="plain-button reply-button"
+        <button class="plain-button"
              ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
              ng-if="note.category === 'questions' && !baseline">
-                Add Answer
+                ADD ANSWER
         </button>
 
         <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
