--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -27,7 +27,7 @@
         <div class="note-contributor">Other•</div>
     </div>
 
-    <div class="note-contributor">Submitted by {{note.contributor}}•</div>
+    <div class="note-contributor">{{note.contributor}}•</div>
     <div class="date">{{date}}<br></div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
     <div class="note-content">{{note.content}}</div>
