--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -504,14 +504,14 @@ h2{
 
 .menu-one{
   background-image: url(../images/PNG/arrow-right.png);
-  background-position: 0px 0px;
+  background-position: 0 0;
   margin-right:10px;
   float:right;
 }
 
 .menu-two{
   background-image: url(../images/PNG/arrow-left.png);
-  background-position: 0px 2px;
+  background-position: 0 2px;
   margin-right:20px;
   float:left;
 }
