different note icons

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -209,20 +209,20 @@ img{
 }
 
 .filter-icon-details {
-  background-image: url(../images/PNG/pin.png);
+  background-image: url(../images/PNG/note-pin.png);
   background-size: 14px;
 }
 .filter-icon-corrections {
-  background-image: url(../images/PNG/healing.png);
+  background-image: url(../images/PNG/note-healing.png);
 }
 
 .filter-icon-questions {
-  background-image: url(../images/PNG/question.png);
+  background-image: url(../images/PNG/note-question.png);
   background-size: 13px;
 }
 
 .filter-icon-other {
-  background-image: url(../images/PNG/other.png);
+  background-image: url(../images/PNG/note-other.png);
   background-size: 17px;
 }
 
