--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -11,23 +11,23 @@
         <div ng-if="general">General</div>
     </div>
     <div ng-if="note.category=='corrections'">
-        <div class="filter-icon filter-icon-corrections note-icon" style="margin-top:5px"></div>
-        <div class="note-contributor">Corrections•</div>
+        <div class="filter-icon note-icon-corrections note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-contributor">Corrections</div>
     </div>
     <div ng-if="note.category=='details'">
-        <div class="filter-icon filter-icon-details note-icon" style="margin-top:5px"></div>
-        <div class="note-contributor">Tell Me More!•</div>
+        <div class="filter-icon note-icon-details note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-contributor">Tell Me More!</div>
     </div>
     <div ng-if="note.category=='questions'">
-        <div class="filter-icon filter-icon-questions note-icon" style="margin-top:5px"></div>
-        <div class="note-contributor">Questions•</div>
+        <div class="filter-icon note-icon-questions note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-contributor">Questions</div>
     </div>
     <div ng-if="note.category=='other'">
-        <div class="filter-icon filter-icon-other note-icon" style="margin-top:5px"></div>
-        <div class="note-contributor">Other•</div>
+        <div class="filter-icon note-icon-other note-icon" style="margin-top:5px; margin-right:5px;"></div>
+        <div class="note-contributor">Other</div>
     </div>
 
-    <div class="note-contributor">{{note.contributor}}•</div>
+    <div class="note-contributor">{{note.contributor}}</div>
     <div class="date">{{date}}<br></div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
     <div class="note-content">{{note.content}}</div>
