--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -6,12 +6,12 @@
     <div class="comment-footer">
         <button class="plain-button reply-button" ng-if="currentReply !== note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">REPLY</button>
         <button class="plain-button reply-button" ng-if="currentReply === note.id" ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">Cancel</button>
-        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
+        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class=" delete-button"></button>
         <button class="rating-button" ng-class="{'rated':note.contributor_list.indexOf(user.id)!=-1}" ng-click="rateIt(note.id)" tooltip="recommend"></button>
         <div class="note-rating">
-            <div class="text" ng-if="note.contributor_list.length>1">{{note.contributor_list.length}} people found this helpful.</div>
-            <div class="text" ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
-            <div class="text" ng-if="note.contributor_list.length<1">Not rated yet.</div>
+            <div ng-if="note.contributor_list.length>1">{{note.contributor_list.length}} people found this helpful.</div>
+            <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
+            <div ng-if="note.contributor_list.length<1">Not rated yet.</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-reply="currentReply" top-note="topNote"></note>
     </div>
