--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -97,24 +97,42 @@ img{
   background-position: 0 2px;
 }
 
-.selected-details, .note-details,.icon-details:hover,.number-details {
+.selected-details,.filter-icon-details:hover, .number-details, .icon-details:hover {
   background-color: rgba(166,130,255,0.34);
 }
-.selected-corrections, .note-corrections, .icon-corrections:hover,.number-corrections {
+.selected-corrections,.filter-icon-corrections:hover,.number-corrections,  .icon-corrections:hover {
   background-color: #ffc497;
 }
 
-.selected-questions, .note-questions, .icon-questions:hover,.number-questions {
+.selected-questions,.filter-icon-questions:hover,.number-questions, .icon-questions:hover {
   background-color: #fff07d;
 }
-.selected-other, .note-other, .icon-other:hover,.number-other {
+.selected-other,.filter-icon-other:hover,.number-other, .icon-other:hover {
   background-color: #d4ed96;
 }
 
-.reply-details{background-color: rgba(176,140,265,0.34);}
-.reply-corrections{background-color: #ffb874;}
-.reply-questions{background-color: #f0e276;}
-.reply-other{ background-color: #c4dd86}
+.note-details {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid rgba(166,130,255,0.34);
+}
+.note-corrections {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #ffc497;
+}
+
+.note-questions {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #fff07d;
+}
+.note-other{
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #d4ed96;
+}
+
+.reply-details{border-left:1px solid rgba(176,140,265,0.34);}
+.reply-corrections{border-left:1px solid #ffb874;}
+.reply-questions{border-left:1px solid #f0e276;}
+.reply-other{ border-left:1px solid #c4dd86}
 
 .note-area{
   margin-bottom:20px;
@@ -124,7 +142,6 @@ img{
   background-color: #fff;
   background-repeat: no-repeat;
   background-size: 16px;
-  border: 1px solid #9b9b9b;
   display: inline-block;
   font-size: 75%;
   top: -5px;
@@ -133,7 +150,7 @@ img{
 }
 
 .note{
-  border: 1px solid rgba(151,151,151,0.18);
+  //border: 1px solid rgba(151,151,151,0.18);
   margin: 10px 0;
   padding:5px 10px;
   clear: both;
