--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -163,18 +163,40 @@ img{
   background-position: 2px 2px;
 }
 
-.selected-details, .note-details,.filter-icon-details:hover, .number-details, .icon-details:hover {
+.selected-details,.filter-icon-details:hover, .number-details, .icon-details:hover {
   background-color: rgba(166,130,255,0.34);
 }
-.selected-corrections, .note-corrections,.filter-icon-corrections:hover,.number-corrections,  .icon-corrections:hover {
+.selected-corrections,.filter-icon-corrections:hover,.number-corrections,  .icon-corrections:hover {
   background-color: #ffc497;
 }
 
-.selected-questions, .note-questions, .filter-icon-questions:hover,.number-questions, .icon-questions:hover {
+.selected-questions,.filter-icon-questions:hover,.number-questions, .icon-questions:hover {
   background-color: #fff07d;
 }
-.selected-other, .note-other, .filter-icon-other:hover,.number-other, .icon-other:hover {
+.selected-other,.filter-icon-other:hover,.number-other, .icon-other:hover {
   background-color: #d4ed96;
+}
+
+.note-details {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid rgba(166,130,255,0.34);
+  background-color:white;
+}
+.note-corrections {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #ffc497;
+  background-color:white;
+}
+
+.note-questions {
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #fff07d;
+  background-color:white;
+}
+.note-other{
+  border: 1px solid #d3d3d3;
+  border-left:6px solid #d4ed96;
+  background-color:white;
 }
 
 .reply-details{background-color: rgba(176,140,265,0.34);}
@@ -183,10 +205,10 @@ img{
 .reply-other{ background-color: #c4dd86}
 
 .note:before {
-  background-color: #fff;
+  //background-color: #fff;
   background-repeat: no-repeat;
   background-size: 16px;
-  border: 1px solid #9b9b9b;
+  //border: 1px solid #9b9b9b;
   display: inline-block;
   font-size: 75%;
   top: -5px;
@@ -195,7 +217,7 @@ img{
 }
 
 .note {
-  border: 1px solid rgba(151,151,151,0.18);
+  //border: 1px solid rgba(151,151,151,0.18);
   margin: 10px 0;
   padding:5px 10px;
   clear: both;
@@ -232,7 +254,7 @@ img{
 }
 
 .reply-content{
-  background-color: #f0e276;
+  background-color: white;
 }
 
 .input-container {
