--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -36,6 +36,7 @@ img{
 
 .note-content{
   padding:0 15px;
+  font-family:'Open sans', sans-serif;
   font-size:13px;
 }
 
@@ -74,6 +75,7 @@ img{
   position : absolute;
   background-color: #000;
   font-size:0.7em;
+  font-family:'Open sans', sans-serif;
   border-radius: 10px;
   color: #fff;
   margin-left: -10px;
@@ -179,24 +181,24 @@ img{
 
 .note-details {
   border: 1px solid #d3d3d3;
-  border-left:6px solid rgba(166,130,255,0.34);
-  background-color:white;
+  border-left:6px solid #e0d4ff;
+  //background-color:white;
 }
 .note-corrections {
   border: 1px solid #d3d3d3;
   border-left:6px solid #ffc497;
-  background-color:white;
+  //background-color:white;
 }
 
 .note-questions {
   border: 1px solid #d3d3d3;
   border-left:6px solid #fff07d;
-  background-color:white;
+  //background-color:white;
 }
 .note-other{
   border: 1px solid #d3d3d3;
-  border-left:6px solid #d4ed96;
-  background-color:white;
+  border-left:6px solid #d4ee96;
+  //background-color:white;
 }
 
 .reply-details{background-color: rgba(176,140,265,0.34);}
@@ -205,23 +207,30 @@ img{
 .reply-other{ background-color: #c4dd86}
 
 .note:before {
-  //background-color: #fff;
   background-repeat: no-repeat;
   background-size: 16px;
-  //border: 1px solid #9b9b9b;
   display: inline-block;
   font-size: 75%;
+  font-family:'Open sans', sans-serif;
   top: -5px;
   padding: 0 10px 0 10px;
   position: relative;
 }
 
 .note {
-  //border: 1px solid rgba(151,151,151,0.18);
   margin: 10px 0;
   padding:5px 10px;
   clear: both;
   border-radius: 2px;
+  background-color:white;
+}
+
+.note-replies{
+  margin-bottom:0 !important;
+  border-bottom:none;
+  z-index:1;
+  position:relative;
+  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.11) !important;
 }
 
 .dropdown {
@@ -235,7 +244,8 @@ img{
   text-align: right;
   float: left;
   margin-right:10px;
-  color: #7f7f7f;
+  color: #8d8d8d;
+  font-family:'Open sans', sans-serif;
   font-weight:bold;
 }
 
@@ -254,13 +264,21 @@ img{
 }
 
 .reply-content{
-  background-color: white;
+  margin-top:0 !important;
+  border-top:none;
+  position:relative;
+}
+
+.reply-chain{
+  margin-top:0 !important;
+  border-top:none;
 }
 
 .input-container {
   background-color: #fff;
   border: 1px solid #949494;
   font-size: 0.9em;
+  font-family:'Open sans', sans-serif;
   margin: 0 0 0 500px;
   padding: 5px;
   position: fixed;
@@ -273,7 +291,7 @@ img{
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 10px;
-  background-color: #d6d6d6;
+  background-color: #e9e9e9;
   position: fixed;
   right: 20px;
   top: 14.7%;
@@ -284,7 +302,7 @@ img{
   border: 1px solid rgb(216, 211, 222);
   border-bottom: none;
   padding: 5px;
-  background: #d6d6d6;
+  background-color: #e9e9e9;
   position: fixed;
   top: 4.2%;
   height: 10.6%;
@@ -327,25 +345,24 @@ img{
 }
 
 .plain-button {
-  border: 1px solid #9b9b9b;
+  background-color: #62e2d9;
   float: right;
-  padding: 0 3px;
+  padding: 2px 11px;
   position: relative;
   right: 0;
   top: 0;
-}
-
-.reply-button:hover {
-  background: rgba(149, 157, 255, 0.68);
+  font-weight:bold;
+  font-family:'Open sans', sans-serif;
+  color: white;
+  line-height: 20px;
 }
 
 .reply-button {
-  background: rgba(226, 241, 255, 0.64);
   float: right;
-  font-size: 0.6em;
-  border-radius: 3px;
+  font-size: 0.65em;
+  font-family:'Open sans', sans-serif;
+  border-radius: 4px;
   margin-left: 5px;
-  line-height: 15px;
 }
 
 .comment-footer {
@@ -364,11 +381,13 @@ img{
 h1 {
   font-size: 130%;
   font-weight: bold;
+  font-family:'Open sans', sans-serif;
 }
 
 h2 {
   font-size: 110%;
   font-weight: bold;
+  font-family:'Open sans', sans-serif;
 }
 
 .contributors-show{
@@ -403,6 +422,7 @@ h2 {
   float: left;
   margin-right: 2px;
   font-size: small;
+  font-family:'Open sans', sans-serif;
   color: #333666;
 }
 
@@ -415,21 +435,25 @@ h2 {
 
 .tutorial-title {
   font-size: 30px;
+  font-family:'Open sans', sans-serif;
 }
 
 .tutorial-author {
   font-size: large;
+  font-family:'Open sans', sans-serif;
   color: grey;
 }
 
 .contributor-button {
   margin-left: 2px;
   font-size: medium;
+  font-family:'Open sans', sans-serif;
   color: darkgrey;
 }
 
 .note-number {
   text-align: left;
+  font-family:'Open sans', sans-serif;
   font-size: medium;
 }
 
@@ -439,6 +463,7 @@ h2 {
   padding: 2px;
   margin: 2px 2px;
   font-size: 10px;
+  font-family:'Open sans', sans-serif;
   position: absolute;
   right: -5px;
   top: -8px;
@@ -446,6 +471,7 @@ h2 {
 
 .window-title {
   font-weight: bold;
+  font-family:'Open sans', sans-serif;
   color: darkgrey;
   margin-left: 15px;
   float: left;
@@ -464,7 +490,8 @@ h2 {
   float: left;
   clear: right;
   margin-bottom: 2px;
-  font-size: 0.8em
+  font-size: 0.8em;
+  font-family:'Open sans', sans-serif;
 }
 
 .delete-button {
@@ -485,6 +512,7 @@ h2 {
 
 .close-button {
   font-size: 0.8em;
+  font-family:'Open sans', sans-serif;
   float: right;
 }
 
@@ -502,7 +530,7 @@ h2 {
 }
 
 .close-button:hover {
-  text-decoration: underline black;show-step-button:hover
+  text-decoration: underline black;
 }
 
 .close-button-second {
@@ -511,6 +539,7 @@ h2 {
 
 .return-button {
   font-size: 0.8em;
+  font-family:'Open sans', sans-serif;
 }
 
 .return-button:hover {
@@ -519,12 +548,15 @@ h2 {
 
 .note-rating {
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   text-align: left;
   margin-right: 15px;
+  color: #8d8d8d;
 }
 
 .note-steps {
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   float: right;
   margin-right: 10px;
 }
@@ -551,7 +583,8 @@ h2 {
   padding-left: 15px;
   text-align: left;
   font-weight: bold;
-  color: grey;
+  font-family:'Open sans', sans-serif;
+  color: #8d8d8d;
 }
 
 .disabled-steps {
@@ -629,8 +662,10 @@ h2 {
 
 .date {
   font-size: 11px;
-  color: #7f7f7f;
+  color: #8d8d8d;
   font-weight:bold;
+  font-family:'Open sans', sans-serif;
+
 }
 
 .filter-title {
@@ -647,13 +682,15 @@ h2 {
 
 .text{
   font-size: 11px;
-  color: #7f7f7f;
+  color: #8d8d8d;
   font-weight:400;
+  font-family:'Open sans', sans-serif;
 }
 
 .filter-button {
   border-radius: 2px;
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   background-color: white;
   line-height: 15px;
   margin-right: 20px;
@@ -667,6 +704,7 @@ h2 {
   float: right;
   margin-top: 3px;
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   border-radius: 3px;
   background-color: white;
   outline: none;
