--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,11 +1,13 @@
-<div class="note" ng-class="
-    (note.category === 'corrections' ? 'note-corrections' :
-    (note.category === 'details' ? 'note-details' :
-    (note.category === 'questions'? 'note-questions' :
-    (note.category === 'other' ? 'note-other' : 'reply-content'))))">
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null">show steps</button>
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null">hide steps</button>
-    <div class="note-steps">
+<div class="note" ng-class="{
+     'note-corrections': note.category === 'corrections' || parentCategory === 'corrections' ,
+     'note-details': note.category === 'details' || parentCategory === 'details' ,
+     'note-questions': note.category === 'questions' || parentCategory === 'questions' ,
+     'note-other': note.category === 'other' || parentCategory === 'other',
+     'reply-content': note.category === 'reply',
+     'note-replies': note.replies.length>0}">
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null && notelist.length>1 ">show steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null && notelist.length>1 ">hide steps</button>
+    <div class="note-steps text">
         <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
         <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
         <div ng-if="general">General</div>
@@ -34,9 +36,8 @@
     <div class="comment-footer">
         <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
         <button class="plain-button reply-button"
-             ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
-             ng-if="note.category === 'questions'">
-                Add Answer
+             ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)">
+                REPLY
         </button>
 
         <button class="rating-button" ng-class="{'rated':note.contributor_list.indexOf(user.id)!=-1}" ng-click="rateIt(note.id)" tooltip="recommend"></button>
@@ -45,7 +46,6 @@
             <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
             <div ng-if="note.contributor_list.length<1">Not rated yet.</div>
         </div>
-
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
     </div>
 </div>
+<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory"></note>
