--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -40,7 +40,7 @@ img{
   background-size: 16px;
   border: 1px solid #fff;
   border-radius: 6px;
-  background-color: #d9d9d9;
+  background-color: #979797;
   height: 24px;
   line-height: 9px;
   width: 24px;
@@ -54,13 +54,13 @@ img{
   content : attr(tooltip);
   opacity : 0;
   position : absolute;
-
   background-color: #000;
+  font-size:0.7em;
   border-radius: 10px;
   color: #fff;
-  margin-left: -10px;
-  margin-top: -40px;
-  padding: 5px;
+  margin-left: -30px;
+  margin-top: 10px;
+  padding: 2px;
   pointer-events: none;
   transition: all 0.1s ease;
   white-space: nowrap;
@@ -81,7 +81,7 @@ img{
 }
 
 .icon-corrections{
-  background-image: url(../images/PNG/healing.png);
+  background-image: url(../images/SVG/healing.svg);
   background-position: 3px;
 }
 
@@ -97,32 +97,32 @@ img{
   background-position: 0 2px;
 }
 
-.selected-details,.filter-icon-details:hover, .number-details, .icon-details:hover {
-  background-color: rgba(166,130,255,0.34);
+.selected-details, .number-details, .icon-details:hover {
+  background-color: #e0d4ff;
 }
-.selected-corrections,.filter-icon-corrections:hover,.number-corrections,  .icon-corrections:hover {
-  background-color: #ffc497;
+.selected-corrections,.number-corrections,  .icon-corrections:hover {
+  background-color: #ffc497
 }
 
-.selected-questions,.filter-icon-questions:hover,.number-questions, .icon-questions:hover {
-  background-color: #fff07d;
+.selected-questions,.number-questions, .icon-questions:hover {
+  background-color: #fff07d
 }
-.selected-other,.filter-icon-other:hover,.number-other, .icon-other:hover {
+.selected-other,.number-other, .icon-other:hover {
   background-color: #d4ed96;
 }
 
 .note-details {
   border: 1px solid #d3d3d3;
-  border-left:6px solid rgba(166,130,255,0.34);
+  border-left:6px solid #e0d4ff;
 }
 .note-corrections {
   border: 1px solid #d3d3d3;
-  border-left:6px solid #ffc497;
+  border-left:6px solid #ffc497
 }
 
 .note-questions {
   border: 1px solid #d3d3d3;
-  border-left:6px solid #fff07d;
+  border-left:6px solid #fff07d
 }
 .note-other{
   border: 1px solid #d3d3d3;
@@ -138,19 +138,27 @@ img{
   margin-bottom:20px;
 }
 
+.reply-button {
+  float: right;
+  font-size: 0.65em;
+  font-family:'Open sans', sans-serif;
+  border-radius: 4px;
+  margin-left: 5px;
+}
+
 .note:before{
   background-color: #fff;
   background-repeat: no-repeat;
   background-size: 16px;
   display: inline-block;
   font-size: 75%;
+  font-family:'Open sans', sans-serif;
   top: -5px;
   padding: 20px;
   position: relative;
 }
 
 .note{
-  //border: 1px solid rgba(151,151,151,0.18);
   margin: 10px 0;
   padding:5px 10px;
   clear: both;
@@ -159,10 +167,11 @@ img{
 
 .note-contributor{
   font-size: 11px;
+  font-family:'Open sans', sans-serif;
   text-align: right;
   float:left;
   margin-right:10px;
-  color: #7f7f7f;
+  color: #8d8d8d;;
   font-weight:bold;
 }
 
@@ -182,6 +191,7 @@ img{
   background-color: #fff;
   border: 1px solid #949494;
   font-size: 0.9em;
+  font-family:'Open sans', sans-serif;
   margin: 0 0 0 -80px;
   padding: 5px;
   position: fixed;
@@ -203,7 +213,8 @@ img{
   width: 93%;
   background-color: white;
   font-size: 11px;
-  border: solid 1px #e2e2e2
+  border: solid 1px #e2e2e2;
+  font-family:'Open sans', sans-serif;
 }
 
 .reply-content{
@@ -247,18 +258,19 @@ img{
   float:left;
 }
 
-.plain-button{
-  background-color: white;
+.plain-button {
+  background-color: #62e2d9;
   float: right;
   padding: 3px 8px;
   position: relative;
   right: 0;
   top: 0;
   font-weight:bold;
-  color: #6c6c6c;
-  line-height: 15px;
-  border-radius: 4px;
-  font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
+  color: white;
+  line-height: 20px;
+  font-size:11px;
+  border-radius:2px;
 }
 
 .plain-button:hover{
@@ -282,11 +294,13 @@ img{
 h1{
   font-size: 130%;
   font-weight: bold;
+  font-family:'Open sans', sans-serif;
 }
 
 h2{
   font-size: 110%;
   font-weight: bold;
+  font-family:'Open sans', sans-serif;
 }
 
 .contributors-show{
@@ -320,6 +334,7 @@ h2{
   float: left;
   margin-right:2px;
   font-size: small;
+  font-family:'Open sans', sans-serif;
   color: #797979;
 }
 
@@ -333,22 +348,26 @@ h2{
 .note-content{
   padding:0 15px;
   font-size:13px;
+  font-family:'Open sans', sans-serif;
 }
 
 .tutorial-title{
   font-size:30px;
+  font-family:'Open sans', sans-serif;
   color: #3f3f3f;
   margin:15px 0;
 }
 
 .tutorial-author{
   font-size: large;
+  font-family:'Open sans', sans-serif;
   color: #3f3f3f;
   margin-bottom:3px;
 }
 
 .step-title {
   font-size: 20px;
+  font-family:'Open sans', sans-serif;
   color: #3f3f3f;
   margin-bottom: 20px;
   font-weight: 300;
@@ -357,12 +376,14 @@ h2{
 .contributor-button{
   margin-left:2px;
   font-size: medium;
+  font-family:'Open sans', sans-serif;
   color: #8D8D8D;
 }
 
 .note-number{
   text-align:left;
   font-size:medium;
+  font-family:'Open sans', sans-serif;
 }
 
 .icon__number {
@@ -372,6 +393,7 @@ h2{
   padding: 2px;
   margin: 2px 2px;
   font-size: 10px;
+  font-family:'Open sans', sans-serif;
   position: absolute;
   right:-5px;
   top:-8px;
@@ -379,6 +401,7 @@ h2{
 
 .window-title{
   font-weight:bold;
+  font-family:'Open sans', sans-serif;
   color:darkgrey;
   margin-left:15px;
   float:left;
@@ -398,16 +421,17 @@ h2{
   float:left;
   clear:right;
   margin-bottom:2px;
-  font-size: 0.8em
+  font-size: 0.8em;
+ font-family:'Open sans', sans-serif;
 }
 
 .delete-button {
   margin: 0 10px;
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   float: right;
   border-radius: 4px;
   color:red;
-  background:none;
 }
 
 .delete-button:hover{
@@ -416,6 +440,7 @@ h2{
 }
 .close-button{
   font-size: 0.8em;
+  font-family:'Open sans', sans-serif;
   float: right;
 }
 
@@ -437,6 +462,7 @@ h2{
 
 .return-button{
   font-size: 0.8em;
+  font-family:'Open sans', sans-serif;
 }
 
 .return-button:hover{
@@ -445,13 +471,16 @@ h2{
 
 .note-rating{
   font-size: 0.6em;
-  color: #7f7f7f;
+  font-family:'Open sans', sans-serif;
+  color: #8d8d8d;;
 }
 
 .note-steps {
   font-size: 0.6em;
+  font-family:'Open sans', sans-serif;
   float: right;
   margin-right: 10px;
+  color:#8d8d8d;
 }
 
 .rating-button {
@@ -476,6 +505,7 @@ h2{
   padding-left:15px;
   text-align:left;
   font-weight:bold;
+  font-family:'Open sans', sans-serif;
   color:grey;
 }
 
@@ -539,14 +569,16 @@ h2{
 
 .text{
   font-size: 11px;
-  color: #7f7f7f;
+  color: #8d8d8d;;
   font-weight:400;
+  font-family:'Open sans', sans-serif;
 }
 
 .date {
   font-size: 11px;
-  color: #7f7f7f;
+  color: #8d8d8d;
   font-weight:bold;
+  font-family:'Open sans', sans-serif;
 }
 
 .side-bar{
